change "создать категории" button

--- a/views/layouts/postsListViewLayout.handlebars
+++ b/views/layouts/postsListViewLayout.handlebars
@@ -11,7 +11,7 @@
 
 <div class="container relative" style="">
     <div id="categories" class="colorMain">
-        <a class="makeCategory"> Создать категорию </a>
+        <a class="makeCategory bigBtn accentBtn roundBorder"> Создать категорию </a>
         <h2 style="border-bottom-style:solid;" class="colorTextDark">Категории</h2>
         {{>categoriesListPanel}}
     </div>
