Init of html and css design of site

--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -1,11 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--<link rel="stylesheet" type="text/css" href="public/styles/index.css">-->
+
+    <link rel="stylesheet" type="text/css" href="new_index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&family=Josefin+Slab&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" href="../styles/index.css">
+    <title>Name of forum</title>
 </head>
 <body>
-<h1>Hi</h1>
+    <div class="header">
+        <a>Name of Forum</a>
+        <a class="header_color link" href="#">profile_name</a>
+    </div>
+    <div class="container">
+        <div class="themes">
+            <h2 style="border-bottom-style:solid">Themes</h2>
+            <div class="theme link">first theme</div>
+            <div class="theme link">another theme</div>
+            <div class="theme link">first theme</div>
+            <div class="theme link">forth theme</div>
+            <div class="theme link">first theme</div>
+        </div>
+        <div class="selected_theme">
+            <p style="border-bottom-style:solid; max-width: 1100px">Text nkevbhebhewbhvibewibeibnvnweovnjnwvjnejvwvjenejvnwejnvownovnwjjvnewnjewnvjenwjof selected theme</p>
+            <div class="answer">
+                <div style="border-right-style: solid; border-width: 2px; margin-right: 10px;">
+                    <div class="avatar">
+                        <div class="nickname link" href="#">Nickname</div>
+                    </div>
+                </div>
+                <a>answer 1\nDSASDASDADA\nsadsadaddsvsvvfdfefevvefnajfnjkbdvbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</a>
+                <img class="vote" src="dislike.png" alt="#"/>
+            </div>
+            <div class="answer">
+                <div style="border-right-style: solid; border-width: 2px; margin-right: 10px;">
+                    <div class="avatar">
+                        <div class="nickname link" href="#">Nickname</div>
+                    </div>
+                </div>
+                <a>answer 1\nDSASDASDADA\nsadsadaddsvsvvfdfefevvefnajfnjkbdvbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</a>
+                <img class="vote" src="dislike.png" alt="#"/>
+            </div>
+            <div class="answer">
+                <div style="border-right-style: solid; border-width: 2px; margin-right: 10px;">
+                    <div class="avatar">
+                        <div class="nickname link" href="#">Nickname</div>
+                    </div>
+                </div>
+                <a>answer 1\nDSASDASDADA\nsadsadaddsvsvvfdfefevvefnajfnjkbdvbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</a>
+                <img class="vote" src="dislike.png" alt="#"/>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
