add scroll bar, changed design of categories

--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -6,31 +6,40 @@
     <link rel="stylesheet" type="text/css" href="new_index.css">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&family=Josefin+Slab&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
-    <title>Name of forum</title>
+    <title>IU9-Forum</title>
 </head>
 <body>
     <div class="header">
-        <a>Name of Forum</a>
-        <a class="header_color link" href="#">profile_name</a>
+        <a class="header_color link" href="#">IU9-Forum</a>
+        <a class="header_color link2" href="#">profile_name</a>
     </div>
     <div class="container">
         <div class="themes">
             <h2 style="border-bottom-style:solid">Themes</h2>
-            <div class="theme link">first theme</div>
-            <div class="theme link">another theme</div>
-            <div class="theme link">first theme</div>
-            <div class="theme link">forth theme</div>
-            <div class="theme link">first theme</div>
+            <ul style="list-style-type:none; margin-left: 5px">
+                <li class="theme link"> SPORT</li>
+                <li class="theme link"> MUSIC </li>
+                <li class="theme link"> FILMS </li>
+                <li class="theme link"> SERIALS </li>
+                <li class="theme link"> SPORT</li>
+                <li class="theme link"> VIDEOGAMES </li>
+                <li class="theme link"> PROGRAMMING </li>
+                <li class="theme link"> PROGRAMMING </li>
+                <li class="theme link"> PROGRAMMING </li>
+                <li class="theme link"> PROGRAMMING </li>
+                <li class="theme link"> PROGRAMMING </li>
+                <li class="theme link"> PROGRAMMING </li>
+            </ul>
         </div>
         <div class="selected_theme">
-            <p style="border-bottom-style:solid; max-width: 1100px">Text nkevbhebhewbhvibewibeibnvnweovnjnwvjnejvwvjenejvnwejnvownovnwjjvnewnjewnvjenwjof selected theme</p>
+            <p style="border-bottom-style:solid; max-width: 120vh">Text nkevbhebhewbhvibewibeibnvnweovnjnwvjnejvwvjenejvnwejnvownovnwjjvnewnjewnvjenwjof selected theme</p>
             <div class="answer">
                 <div style="border-right-style: solid; border-width: 2px; margin-right: 10px;">
                     <div class="avatar">
                         <div class="nickname link" href="#">Nickname</div>
                     </div>
                 </div>
-                <a>answer 1\nDSASDASDADA\nsadsadaddsvsvvfdfefevvefnajfnjkbdvbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</a>
+                <a style="max-width: 1000px">answer 1\nDSASDASDADA\nsadsvdsvsvnndjvnjvjvnjwevewvewvwevew vwveweevwvewvewwvvewvewvewvw vewvwevvwvwvwevewvewvwv wevwevweveadaddsvsvvfdfefevvefnajfnjkbd csaacascasccassacsacsacascascsacascascascas ca csaacscacacascascsacsacsacascascsa cascsacsacsacsa cacscsaacacscsacsacsaasccsacsacascsa csacascascascsacsacasaccacasscasacca vbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</a>
                 <img class="vote" src="dislike.png" alt="#"/>
             </div>
             <div class="answer">
@@ -50,6 +59,11 @@
                 </div>
                 <a>answer 1\nDSASDASDADA\nsadsadaddsvsvvfdfefevvefnajfnjkbdvbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</a>
                 <img class="vote" src="dislike.png" alt="#"/>
+            </div>
+            <div class="new_answer">
+                <div class="avatar"></div>
+                <div class="my_answer">My answer</div>
+                <div class="button">Button</div>
             </div>
         </div>
     </div>
