--- a/public/templates/new_index.css
+++ b/public/templates/new_index.css
@@ -4,60 +4,75 @@ body {
     width: 100%;
     font-family: 'DM Sans', sans-serif;
     font-size: 20px;
-    background: #e0dbd7;
+    background: rgb(245, 242, 235  );
     color: #333333;
 }
 
 .header {
-    margin: 0 auto;
-    padding: 15px 25px 0 15px;
+    margin-left: 5vh;
+    margin-right: 20%;
+    padding: 1vh 5vh 0 5vh;
     width: 100%;
     height: 5vh;
-    max-width: 1600px;
-    background: #333333;
+    max-width: 152vh;
+    background: rgb(41, 42, 40);
     background-size: cover;
     color: antiquewhite;
-    font-family: 'Cinzel', serif;
+    font-family: 'Cinzel', sans-serif;
     display: flex;
     justify-content: space-between;
 
-    border-radius: 0 0 25px 25px;
+    border-radius: 0 0 1vh 1vh;
 }
 
 .header_color {
-    color: antiquewhite;
+    color: rgb(220, 209, 192);
 }
 
 .link {
-    font-family: 'DM Sans', sans-serif;
+    font-family: 'Cinzel', sans-serif;
     text-decoration: none;
+    transition-duration: 0.2s;
+}
+
+.link2 {
+    font-family: Georgia, serif;
+    text-decoration: none;
+    transition-duration: 0.2s;
 }
 
 .link:hover {
-    color: #a3c6c0;
+    color: rgb(229, 151, 21  );
+}
+
+.link2:hover {
+    color: rgb(229, 151, 21  );
 }
 
 
 .themes {
-    width: 50%;
-    max-width: 500px;
+    width: 30%;
+    max-width: 50vh;
     height: 80vh;
-    padding: 0 10px 0 10px;
-    margin: 20px 0 0 0;
-    border-style: solid;
+    padding: 0 10px 0 5px;
+    margin: 20px 5vh 0 5vh;
+    background: rgb(220, 209, 192);
     border-width: 4px;
     border-color: #333333;
-    border-radius: 10px;
+    border-radius: 1vh;
+    overflow-y: auto;
 }
 
 .theme {
-    margin-bottom: 10px;
-    padding: 5px 0 10px 5px;
-    border-style: solid;
-    border-width: 2px;
+    margin-bottom: 1vh;
+    margin-left: 0.01vh;
+    margin-right: 4vh;
+    padding: 2vh 1vh 1vh 0.5vh;
+    background: rgb(191, 181, 163);
+    border-width: 2vh;
     border-color: #333333;
-    border-radius: 10px;
-    height:10vh;
+    border-radius: 1vh;
+    height:5vh;
 }
 
 .container {
@@ -66,14 +81,15 @@ body {
 }
 
 .selected_theme {
-    margin: 20px -40px 0 10px;
+    margin: 20px 5% 0 10px;
+    overflow-y: auto;
     padding: 0 10px 0 20px;
     width: 100%;
-    border-style: solid;
+    background: rgb(220, 209, 192);
     border-left-style: none;
     border-width: 4px;
     border-color: #333333;
-    border-radius: 0px 10px 10px 0px;
+    border-radius: 1vh;
 }
 
 .answer {
@@ -120,8 +136,19 @@ body {
     width: 25px;
 }
 
+.my_answer {
+    width: 65ch;
+    background: white;
+    margin-left: 20px;
+    margin-bottom: 10px;
+    margin-right: 20px;
+}
 
-
+.new_answer {
+    border-top-style: solid;
+    padding: 20px 10px 10px 18px;
+    display: flex;
+}
 
 
 
