--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -31,35 +31,51 @@
                 <li class="theme link"> PROGRAMMING </li>
             </ul>
         </div>
+
         <div class="selected_theme">
             <p style="border-bottom-style:solid; max-width: 120vh">Text nkevbhebhewbhvibewibeibnvnweovnjnwvjnejvwvjenejvnwejnvownovnwjjvnewnjewnvjenwjof selected theme</p>
-            <div class="answer">
-                <div style="border-right-style: solid; border-width: 2px; margin-right: 10px;">
-                    <div class="avatar">
-                        <div class="nickname link" href="#">Nickname</div>
+            <ul>
+                <li class="answer">
+                    <div style="border-right-style: solid; border-width: 2px; margin-right: 10px;">
+                        <div class="avatar">
+                         <div class="nickname link" href="#">Nickname</div>
+                        </div>
                     </div>
-                </div>
-                <a style="max-width: 1000px">answer 1\nDSASDASDADA\nsadsvdsvsvnndjvnjvjvnjwevewvewvwevew vwveweevwvewvewwvvewvewvewvw vewvwevvwvwvwevewvewvwv wevwevweveadaddsvsvvfdfefevvefnajfnjkbd csaacascasccassacsacsacascascsacascascascas ca csaacscacacascascsacsacsacascascsa cascsacsacsacsa cacscsaacacscsacsacsaasccsacsacascsa csacascascascsacsacasaccacasscasacca vbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</a>
-                <img class="vote" src="dislike.png" alt="#"/>
-            </div>
-            <div class="answer">
-                <div style="border-right-style: solid; border-width: 2px; margin-right: 10px;">
-                    <div class="avatar">
-                        <div class="nickname link" href="#">Nickname</div>
+                    <a style="max-width: 1000px">answer 1\nDSASDASDADA\nsadsvdsvsvnndjvnjvjvnjwevewvewvwevew vwveweevwvewvewwvvewvewvewvw vewvwevvwvwvwevewvewvwv wevwevweveadaddsvsvvfdfefevvefnajfnjkbd csaacascasccassacsacsacascascsacascascascas ca csaacscacacascascsacsacsacascascsa cascsacsacsacsa cacscsaacacscsacsacsaasccsacsacascsa csacascascascsacsacasaccacasscasacca vbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</a>
+                    <img class="vote" src="dislike.png" alt="#"/>
+                </li>
+
+                <li class="answer">
+                    <div style="border-right-style: solid; border-width: 2px; margin-right: 10px;">
+                        <div class="avatar">
+                            <div class="nickname link" href="#">Nickname</div>
+                        </div>
                     </div>
-                </div>
-                <a>answer 1\nDSASDASDADA\nsadsadaddsvsvvfdfefevvefnajfnjkbdvbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</a>
-                <img class="vote" src="dislike.png" alt="#"/>
-            </div>
-            <div class="answer">
-                <div style="border-right-style: solid; border-width: 2px; margin-right: 10px;">
-                    <div class="avatar">
-                        <div class="nickname link" href="#">Nickname</div>
+                    <a>answer 1\nDSASDASDADA\nsadsadaddsvsvvfdfefevvefnajfnjkbdvbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</a>
+                    <img class="vote" src="dislike.png" alt="#"/>
+                </li>
+
+                <li class="answer">
+                    <div style="border-right-style: solid; border-width: 2px; margin-right: 10px;">
+                        <div class="avatar">
+                            <div class="nickname link" href="#">Nickname</div>
+                        </div>
                     </div>
-                </div>
-                <a>answer 1\nDSASDASDADA\nsadsadaddsvsvvfdfefevvefnajfnjkbdvbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</a>
-                <img class="vote" src="dislike.png" alt="#"/>
-            </div>
+                    <a>answer 1\nDSASDASDADA\nsadsadaddsvsvvfdfefevvefnajfnjkbdvbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</a>
+                    <img class="vote" src="dislike.png" alt="#"/>
+                </li>
+
+                <li class="answer">
+                    <div style="border-right-style: solid; border-width: 2px; margin-right: 10px;">
+                        <div class="avatar">
+                            <div class="nickname link" href="#">Nickname</div>
+                        </div>
+                    </div>
+                    <a>answer 1\nDSASDASDADA\nsadsadaddsvsvvfdfefevvefnajfnjkbdvbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</a>
+                    <img class="vote" src="dislike.png" alt="#"/>
+                </li>
+            </ul>
+
             <div class="new_answer">
                 <div class="avatar"></div>
                 <div class="my_answer">My answer</div>
