Text size fixes, like, dislike images

--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -41,8 +41,9 @@
                          <div class="nickname link" href="#">Nickname</div>
                         </div>
                     </div>
-                    <a style="max-width: 1000px">answer 1\nDSASDASDADA\nsadsvdsvsvnndjvnjvjvnjwevewvewvwevew vwveweevwvewvewwvvewvewvewvw vewvwevvwvwvwevewvewvwv wevwevweveadaddsvsvvfdfefevvefnajfnjkbd csaacascasccassacsacsacascascsacascascascas ca csaacscacacascascsacsacsacascascsa cascsacsacsacsa cacscsaacacscsacsacsaasccsacsacascsa csacascascascsacsacasaccacasscasacca vbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</a>
-                    <img class="vote" src="dislike.png" alt="#"/>
+                    <a class="answer_text">answer 1\nDSASDASDADA\nsadsvdsvsvnndjvnjvjvnjweve w v e w v w e v e w e e e e e e e vwveweevwvewvewwvvewvewvewvw vewvwevvwvwvwevewvewvwv wevwevweveadaddsvsvvfdfefevvefnajfnjkbd csaacascasccassacsacsacascascsacascascascas ca csaacscacacascascsacsacsacascascsa cascsacsacsacsa cacscsaacacscsacsacsaasccsacsacascsa csacascascascsacsacasaccacasscasacca vbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</a>
+                    <img class="vote like" src="like.png" alt="#"/>
+                    <img class="vote dislike" src="dislike.png" alt="#"/>
                 </li>
 
                 <li class="answer">
@@ -51,8 +52,9 @@
                             <div class="nickname link" href="#">Nickname</div>
                         </div>
                     </div>
-                    <a>answer 1\nDSASDASDADA\nsadsadaddsvsvvfdfefevvefnajfnjkbdvbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</a>
-                    <img class="vote" src="dislike.png" alt="#"/>
+                    <a class="answer_text">answer 1\nDSASDASDADA\nsadsadaddsvsvvfdfefevvefnajfnjkb dvbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</a>
+                    <img class="vote like" src="like.png" alt="#"/>
+                    <img class="vote dislike" src="dislike.png" alt="#"/>
                 </li>
 
                 <li class="answer">
@@ -61,8 +63,9 @@
                             <div class="nickname link" href="#">Nickname</div>
                         </div>
                     </div>
-                    <a>answer 1\nDSASDASDADA\nsadsadaddsvsvvfdfefevvefnajfnjkbdvbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</a>
-                    <img class="vote" src="dislike.png" alt="#"/>
+                    <a class="answer_text">answer 1\nDSASDASDADA\nsadsadaddsvsvvfdfefevve fnajfnjkbdvbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</a>
+                    <img class="vote like" src="like.png" alt="#"/>
+                    <img class="vote dislike" src="dislike.png" alt="#"/>
                 </li>
 
                 <li class="answer">
@@ -71,8 +74,9 @@
                             <div class="nickname link" href="#">Nickname</div>
                         </div>
                     </div>
-                    <a>answer 1\nDSASDASDADA\nsadsadaddsvsvvfdfefevvefnajfnjkbdvbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</a>
-                    <img class="vote" src="dislike.png" alt="#"/>
+                    <a class="answer_text">answer 1\nDSASDASDADA\nsadsadaddsvsvvfdfefe vvefnajfnjkbdvbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</a>
+                    <img class="vote like" src="like.png" alt="#"/>
+                    <img class="vote dislike" src="dislike.png" alt="#"/>
                 </li>
             </ul>
 
