--- a/public/templates/new_index.css
+++ b/public/templates/new_index.css
@@ -45,17 +45,12 @@ body {
     color: rgb(229, 151, 21  );
 }
 
-.link2:hover {
-    color: rgb(229, 151, 21  );
-}
-
-
 .themes {
     width: 30%;
     max-width: 50vh;
-    height: 80vh;
-    padding: 0 10px 0 5px;
-    margin: 20px 5vh 0 5vh;
+    height: 90vh;
+    padding: 0 10px 0 10px;
+    margin: 20px 2vh 0 5vh;
     background: rgb(220, 209, 192);
     border-width: 4px;
     border-color: #333333;
@@ -81,10 +76,10 @@ body {
 }
 
 .selected_theme {
-    margin: 20px 5% 0 10px;
+    margin: 20px 5% 0 2vh;
     overflow-y: auto;
-    padding: 0 10px 0 20px;
-    width: 100%;
+    padding: 0 2vh 0 2vh;
+    width: 80vw;
     background: rgb(220, 209, 192);
     border-left-style: none;
     border-width: 4px;
@@ -105,6 +100,10 @@ body {
     border-color: #333333;
     border-radius: 10px;
     background: #b3a69b;
+}
+
+.answer_text {
+    max-width: 42vw;
 }
 
 .avatar {
@@ -131,9 +130,18 @@ body {
 }
 
 .vote {
-    margin-top: 110px;
-    height: 25px;
-    width: 25px;
+    display: flex;
+    position: absolute;
+    margin: 2vh 2vw 0.5vh 49vw;
+    height: 5vh;
+}
+
+.dislike {
+    margin-top: 7vh;
+}
+
+.like {
+    margin-top: 2vh;
 }
 
 .my_answer {
