fixed (px -> vh/vw), added like counter, redesign themes, -> float, header sizes fixed (center auto)

--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -38,45 +38,35 @@
                 <li class="answer">
                     <div style="border-right-style: solid; border-width: 2px; margin-right: 10px;">
                         <div class="avatar">
-                         <div class="nickname link" href="#">Nickname</div>
+                         <div class="nickname link">Nickname</div>
                         </div>
                     </div>
                     <a class="answer_text">answer 1\nDSASDASDADA\nsadsvdsvsvnndjvnjvjvnjweve w v e w v w e v e w e e e e e e e vwveweevwvewvewwvvewvewvewvw vewvwevvwvwvwevewvewvwv wevwevweveadaddsvsvvfdfefevvefnajfnjkbd csaacascasccassacsacsacascascsacascascascas ca csaacscacacascascsacsacsacascascsa cascsacsacsacsa cacscsaacacscsacsacsaasccsacsacascsa csacascascascsacsacasaccacasscasacca vbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</a>
-                    <img class="vote like" src="like.png" alt="#"/>
-                    <img class="vote dislike" src="dislike.png" alt="#"/>
+                    <a class="vote"><img style="height: 5vh" src="like.png" alt="#"/></a>
+                    <a class="vote"><img style="height: 5vh" src="dislike.png" alt="#"/></a>
+                    <div class="vote_counter">1500</div>
                 </li>
-
                 <li class="answer">
                     <div style="border-right-style: solid; border-width: 2px; margin-right: 10px;">
                         <div class="avatar">
-                            <div class="nickname link" href="#">Nickname</div>
+                            <div class="nickname link">Nickname</div>
                         </div>
                     </div>
-                    <a class="answer_text">answer 1\nDSASDASDADA\nsadsadaddsvsvvfdfefevvefnajfnjkb dvbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</a>
-                    <img class="vote like" src="like.png" alt="#"/>
-                    <img class="vote dislike" src="dislike.png" alt="#"/>
+                    <a class="answer_text">answer 1\nDSASDASDADA\nsadsvdsvsvnndjvnjvjvnjweve w v e w v w e v e w e e e e e e e vwveweevwvewvewwvvewvewvewvw vewvwevvwvwvwevewvewvwv wevwevweveadaddsvsvvfdfefevvefnajfnjkbd csaacascasccassacsacsacascascsacascascascas ca csaacscacacascascsacsacsacascascsa cascsacsacsacsa cacscsaacacscsacsacsaasccsacsacascsa csacascascascsacsacasaccacasscasacca vbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</a>
+                    <a class="vote"><img style="height: 5vh" src="like.png" alt="#"/></a>
+                    <a class="vote"><img style="height: 5vh" src="dislike.png" alt="#"/></a>
+                    <div class="vote_counter">1500</div>
                 </li>
-
                 <li class="answer">
                     <div style="border-right-style: solid; border-width: 2px; margin-right: 10px;">
                         <div class="avatar">
-                            <div class="nickname link" href="#">Nickname</div>
+                            <div class="nickname link">Nickname</div>
                         </div>
                     </div>
-                    <a class="answer_text">answer 1\nDSASDASDADA\nsadsadaddsvsvvfdfefevve fnajfnjkbdvbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</a>
-                    <img class="vote like" src="like.png" alt="#"/>
-                    <img class="vote dislike" src="dislike.png" alt="#"/>
-                </li>
-
-                <li class="answer">
-                    <div style="border-right-style: solid; border-width: 2px; margin-right: 10px;">
-                        <div class="avatar">
-                            <div class="nickname link" href="#">Nickname</div>
-                        </div>
-                    </div>
-                    <a class="answer_text">answer 1\nDSASDASDADA\nsadsadaddsvsvvfdfefe vvefnajfnjkbdvbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</a>
-                    <img class="vote like" src="like.png" alt="#"/>
-                    <img class="vote dislike" src="dislike.png" alt="#"/>
+                    <a class="answer_text">answer 1\nDSASDASDADA\nsadsvdsvsvnndjvnjvjvnjweve w v e w v w e v e w e e e e e e e vwveweevwvewvewwvvewvewvewvw vewvwevvwvwvwevewvewvwv wevwevweveadaddsvsvvfdfefevvefnajfnjkbd csaacascasccassacsacsacascascsacascascascas ca csaacscacacascascsacsacsacascascsa cascsacsacsacsa cacscsaacacscsacsacsaasccsacsacascsa csacascascascsacsacasaccacasscasacca vbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</a>
+                    <a class="vote"><img style="height: 5vh" src="like.png" alt="#"/></a>
+                    <a class="vote"><img style="height: 5vh" src="dislike.png" alt="#"/></a>
+                    <div class="vote_counter">1500</div>
                 </li>
             </ul>
 
