--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="themes">
             <h2 style="border-bottom-style:solid">Themes</h2>
-            <ul style="list-style-type:none; margin-left: 5px">
+            <ul style="list-style-type:none; max-height: 80vh;">
                 <li class="theme link"> SPORT</li>
                 <li class="theme link"> MUSIC </li>
                 <li class="theme link"> FILMS </li>
@@ -33,8 +33,8 @@
         </div>
 
         <div class="selected_theme">
-            <p style="border-bottom-style:solid; max-width: 120vh">Text nkevbhebhewbhvibewibeibnvnweovnjnwvjnejvwvjenejvnwejnvownovnwjjvnewnjewnvjenwjof selected theme</p>
-            <ul>
+            <p style="border-bottom-style:solid; max-width: 100vw">Text nkevbhebhewbhvibewibeibnvnweovnjnwvjnejvwvjenejvnwejnvownovnwjjvnewnjewnvjenwjof selected theme</p>
+            <ul style="margin: -1vh 0 0 0">
                 <li class="answer">
                     <div style="border-right-style: solid; border-width: 2px; margin-right: 10px;">
                         <div class="avatar">
