--- a/public/templates/new_index.css
+++ b/public/templates/new_index.css
@@ -13,8 +13,10 @@ li {
 }
 
 ul {
+    max-height: 65vh;
+    overflow-y: auto;
     margin-left: 0;
-    padding-left: 1vw;
+    padding-left: 0.3vw;
 }
 
 .header {
@@ -79,8 +81,7 @@ ul {
     width: 57vw;
     height: 90vh;
     margin: 3vh 0 0 0;
-    overflow-y: auto;
-    padding: 0 2vh 0 1vw;
+    padding: 0 1vw 0 1vw;
     background: rgb(220, 209, 192);
     border-left-style: none;
     border-width: 4px;
@@ -139,6 +140,7 @@ ul {
     float: right;
     margin-right: 0.7vw;
     margin-bottom: 1vh;
+    margin-top: 0.9vh;
     border-radius: 1vh;
     border-style: solid;
     border-width: 2px;
