--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="themes">
             <h2 style="border-bottom-style:solid">Themes</h2>
-            <ul style="list-style-type:none; max-height: 80vh;">
+            <ul style="list-style-type:none; margin-left: 5px">
                 <li class="theme link"> SPORT</li>
                 <li class="theme link"> MUSIC </li>
                 <li class="theme link"> FILMS </li>
@@ -33,40 +33,51 @@
         </div>
 
         <div class="selected_theme">
+            <a href="#" class="previous"> Back </a>
             <p style="border-bottom-style:solid; max-width: 100vw">Text nkevbhebhewbhvibewibeibnvnweovnjnwvjnejvwvjenejvnwejnvownovnwjjvnewnjewnvjenwjof selected theme</p>
             <ul style="margin: -1vh 0 0 0">
                 <li class="answer">
                     <div style="border-right-style: solid; border-width: 2px; margin-right: 10px;">
                         <div class="avatar">
-                         <div class="nickname link">Nickname</div>
+                         <div class="nickname link" href="#">Nickname</div>
                         </div>
                     </div>
                     <a class="answer_text">answer 1\nDSASDASDADA\nsadsvdsvsvnndjvnjvjvnjweve w v e w v w e v e w e e e e e e e vwveweevwvewvewwvvewvewvewvw vewvwevvwvwvwevewvewvwv wevwevweveadaddsvsvvfdfefevvefnajfnjkbd csaacascasccassacsacsacascascsacascascascas ca csaacscacacascascsacsacsacascascsa cascsacsacsacsa cacscsaacacscsacsacsaasccsacsacascsa csacascascascsacsacasaccacasscasacca vbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</a>
-                    <a class="vote"><img style="height: 5vh" src="like.png" alt="#"/></a>
-                    <a class="vote"><img style="height: 5vh" src="dislike.png" alt="#"/></a>
-                    <div class="vote_counter">1500</div>
+                    <img class="vote like" src="like.png" alt="#"/>
+                    <img class="vote dislike" src="dislike.png" alt="#"/>
                 </li>
+
                 <li class="answer">
                     <div style="border-right-style: solid; border-width: 2px; margin-right: 10px;">
                         <div class="avatar">
-                            <div class="nickname link">Nickname</div>
+                            <div class="nickname link" href="#">Nickname</div>
                         </div>
                     </div>
-                    <a class="answer_text">answer 1\nDSASDASDADA\nsadsvdsvsvnndjvnjvjvnjweve w v e w v w e v e w e e e e e e e vwveweevwvewvewwvvewvewvewvw vewvwevvwvwvwevewvewvwv wevwevweveadaddsvsvvfdfefevvefnajfnjkbd csaacascasccassacsacsacascascsacascascascas ca csaacscacacascascsacsacsacascascsa cascsacsacsacsa cacscsaacacscsacsacsaasccsacsacascsa csacascascascsacsacasaccacasscasacca vbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</a>
-                    <a class="vote"><img style="height: 5vh" src="like.png" alt="#"/></a>
-                    <a class="vote"><img style="height: 5vh" src="dislike.png" alt="#"/></a>
-                    <div class="vote_counter">1500</div>
+                    <a class="answer_text">answer 1\nDSASDASDADA\nsadsadaddsvsvvfdfefevvefnajfnjkb dvbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</a>
+                    <img class="vote like" src="like.png" alt="#"/>
+                    <img class="vote dislike" src="dislike.png" alt="#"/>
                 </li>
+
                 <li class="answer">
                     <div style="border-right-style: solid; border-width: 2px; margin-right: 10px;">
                         <div class="avatar">
-                            <div class="nickname link">Nickname</div>
+                            <div class="nickname link" href="#">Nickname</div>
                         </div>
                     </div>
-                    <a class="answer_text">answer 1\nDSASDASDADA\nsadsvdsvsvnndjvnjvjvnjweve w v e w v w e v e w e e e e e e e vwveweevwvewvewwvvewvewvewvw vewvwevvwvwvwevewvewvwv wevwevweveadaddsvsvvfdfefevvefnajfnjkbd csaacascasccassacsacsacascascsacascascascas ca csaacscacacascascsacsacsacascascsa cascsacsacsacsa cacscsaacacscsacsacsaasccsacsacascsa csacascascascsacsacasaccacasscasacca vbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</a>
-                    <a class="vote"><img style="height: 5vh" src="like.png" alt="#"/></a>
-                    <a class="vote"><img style="height: 5vh" src="dislike.png" alt="#"/></a>
-                    <div class="vote_counter">1500</div>
+                    <a class="answer_text">answer 1\nDSASDASDADA\nsadsadaddsvsvvfdfefevve fnajfnjkbdvbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</a>
+                    <img class="vote like" src="like.png" alt="#"/>
+                    <img class="vote dislike" src="dislike.png" alt="#"/>
+                </li>
+
+                <li class="answer">
+                    <div style="border-right-style: solid; border-width: 2px; margin-right: 10px;">
+                        <div class="avatar">
+                            <div class="nickname link" href="#">Nickname</div>
+                        </div>
+                    </div>
+                    <a class="answer_text">answer 1\nDSASDASDADA\nsadsadaddsvsvvfdfefe vvefnajfnjkbdvbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</a>
+                    <img class="vote like" src="like.png" alt="#"/>
+                    <img class="vote dislike" src="dislike.png" alt="#"/>
                 </li>
             </ul>
 
