--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="themes">
             <h2 style="border-bottom-style:solid">Themes</h2>
-            <ul style="list-style-type:none; margin-left: 5px">
+            <ul style="list-style-type:none; max-height: 80vh">
                 <li class="theme link"> SPORT</li>
                 <li class="theme link"> MUSIC </li>
                 <li class="theme link"> FILMS </li>
@@ -33,9 +33,22 @@
         </div>
 
         <div class="selected_theme">
-            <a href="#" class="previous"> Back </a>
-            <p style="border-bottom-style:solid; max-width: 100vw">Text nkevbhebhewbhvibewibeibnvnweovnjnwvjnejvwvjenejvnwejnvownovnwjjvnewnjewnvjenwjof selected theme</p>
-            <ul style="margin: -1vh 0 0 0">
+            <a href="#" class="backButton"> Back </a>
+            <div class="themeText">Text nkevbhebhewbhvibewibe ibnvnweovnjnw vjnej  v w v j e n e j v n w e j n
+                d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                d d d d d d d d  d d d d d d d dd d
+
+                d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
+                d d d d d d d d d  d d d d d d d d d d d
+                vownovnwjjvnewnjewnvjenwjof selected theme</div>
+            <ul style="margin-top: 15vh">
                 <li class="answer">
                     <div style="border-right-style: solid; border-width: 2px; margin-right: 10px;">
                         <div class="avatar">
@@ -82,7 +95,7 @@
             </ul>
 
             <div class="new_answer">
-                <div class="avatar"></div>
+                <div class="avatar" style="margin-left: 0.4vw"></div>
                 <div class="my_answer">My answer</div>
                 <div class="button">Button</div>
             </div>
