--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -50,45 +50,38 @@
                 vownovnwjjvnewnjewnvjenwjof selected theme</div>
             <ul style="margin-top: 15vh">
                 <li class="answer">
-                    <div style="border-right-style: solid; border-width: 2px; margin-right: 10px;">
-                        <div class="avatar">
-                         <div class="nickname link" href="#">Nickname</div>
-                        </div>
+                    <div class="avatar">
+                        <div class="nickname link" href="#">Nickname</div>
                     </div>
-                    <a class="answer_text">answer 1\nDSASDASDADA\nsadsvdsvsvnndjvnjvjvnjweve w v e w v w e v e w e e e e e e e vwveweevwvewvewwvvewvewvewvw vewvwevvwvwvwevewvewvwv wevwevweveadaddsvsvvfdfefevvefnajfnjkbd csaacascasccassacsacsacascascsacascascascas ca csaacscacacascascsacsacsacascascsa cascsacsacsacsa cacscsaacacscsacsacsaasccsacsacascsa csacascascascsacsacasaccacasscasacca vbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</a>
+                    <div class="answer_text">answer 1\nDSASDASDADA\nsadsvdsvsvnndjvnjvjvnjweve w v e w v w e v
+                        e w e e e e e e e vwveweevwvewvewwvvewvewvewvw vewvwevvwvwvwevewvewvwv
+                        wevwevweveadaddsvsvvfdfefevvefnajfnjkbd csaacascasccassacsacsacascascsacascascascas ca csaacscacacascascsacsacsacascascsa
+                        cascsacsacsacsa cacscsaacacscsacsacsaasccsacsacascsa csacascascasc
+                        sacsacasaccacasscasacca vbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</div>
                     <img class="vote like" src="like.png" alt="#"/>
                     <img class="vote dislike" src="dislike.png" alt="#"/>
                 </li>
-
                 <li class="answer">
-                    <div style="border-right-style: solid; border-width: 2px; margin-right: 10px;">
-                        <div class="avatar">
-                            <div class="nickname link" href="#">Nickname</div>
-                        </div>
+                    <div class="avatar">
+                        <div class="nickname link" href="#">Nickname</div>
                     </div>
-                    <a class="answer_text">answer 1\nDSASDASDADA\nsadsadaddsvsvvfdfefevvefnajfnjkb dvbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</a>
+                    <div class="answer_text">answer 1\nDSASDASDADA\nsadsvdsvsvnndjvnjvjvnjweve w v e w v w e v e w e e e e e e e vwveweevwvewvewwvvewvewvewvw vewvwevvwvwvwevewvewvwv wevwevweveadaddsvsvvfdfefevvefnajfnjkbd csaacascasccassacsacsacascascsacascascascas ca csaacscacacascascsacsacsacascascsa cascsacsacsacsa cacscsaacacscsacsacsaasccsacsacascsa csacascascascsacsacasaccacasscasacca vbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</div>
                     <img class="vote like" src="like.png" alt="#"/>
                     <img class="vote dislike" src="dislike.png" alt="#"/>
                 </li>
-
                 <li class="answer">
-                    <div style="border-right-style: solid; border-width: 2px; margin-right: 10px;">
-                        <div class="avatar">
-                            <div class="nickname link" href="#">Nickname</div>
-                        </div>
+                    <div class="avatar">
+                        <div class="nickname link" href="#">Nickname</div>
                     </div>
-                    <a class="answer_text">answer 1\nDSASDASDADA\nsadsadaddsvsvvfdfefevve fnajfnjkbdvbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</a>
+                    <div class="answer_text">answer 1\nDSASDASDADA\nsadsvdsvsvnndjvnjvjvnjweve w v e w v w e v e w e e e e e e e vwveweevwvewvewwvvewvewvewvw vewvwevvwvwvwevewvewvwv wevwevweveadaddsvsvvfdfefevvefnajfnjkbd csaacascasccassacsacsacascascsacascascascas ca csaacscacacascascsacsacsacascascsa cascsacsacsacsa cacscsaacacscsacsacsaasccsacsacascsa csacascascascsacsacasaccacasscasacca vbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</div>
                     <img class="vote like" src="like.png" alt="#"/>
                     <img class="vote dislike" src="dislike.png" alt="#"/>
                 </li>
-
                 <li class="answer">
-                    <div style="border-right-style: solid; border-width: 2px; margin-right: 10px;">
-                        <div class="avatar">
-                            <div class="nickname link" href="#">Nickname</div>
-                        </div>
+                    <div class="avatar">
+                        <div class="nickname link" href="#">Nickname</div>
                     </div>
-                    <a class="answer_text">answer 1\nDSASDASDADA\nsadsadaddsvsvvfdfefe vvefnajfnjkbdvbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</a>
+                    <div class="answer_text">answer 1\nDSASDASDADA\nsadsvdsvsvnndjvnjvjvnjweve w v e w v w e v e w e e e e e e e vwveweevwvewvewwvvewvewvewvw vewvwevvwvwvwevewvewvwv wevwevweveadaddsvsvvfdfefevvefnajfnjkbd csaacascasccassacsacsacascascsacascascascas ca csaacscacacascascsacsacsacascascsa cascsacsacsacsa cacscsaacacscsacsacsaasccsacsacascsa csacascascascsacsacasaccacasscasacca vbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</div>
                     <img class="vote like" src="like.png" alt="#"/>
                     <img class="vote dislike" src="dislike.png" alt="#"/>
                 </li>
