--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -55,7 +55,7 @@
                     </div>
                     <div class="answer_text">answer 1\nDSASDASDADA\nsadsvdsvsvnndjvnjvjvnjweve w v e w v w e v
                         e w e e e e e e e vwveweevwvewvewwvvewvewvewvw vewvwevvwvwvwevewvewvwv
-                        wevwevweveadaddsvsvvfdfefevvefnajfnjkbd csaacascasccassacsacsacascascsacascascascas ca csaacscacacascascsacsacsacascascsa
+                        wevwevweveadaddsvsvvfdfefevvefnajfnjkbd csascasccassacsacsacascascsacascascascas ca csaacscacacascascsacsacsacascascsa
                         cascsacsacsacsa cacscsaacacscsacsacsaasccsacsacascsa csacascascasc
                         sacsacasaccacasscasacca vbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</div>
                     <img class="vote like" src="like.png" alt="#"/>
@@ -66,7 +66,7 @@
                         <div class="nickname link" href="#">Nickname</div>
                     </div>
                     <div class="answer_text">answer 1\nDSASDASDADA\nsadsvdsvsvnndjvnjvjvnjweve w v e w v w e v e w e e e e e e e vwveweevwvewvewwvvewvewvewvw vewvwevvwvwvwevewvewvwv wevwevweveadaddsvsvvfdfefevvefnajfnjkbd csaacascasccassacsacsacascascsacascascascas ca csaacscacacascascsacsacsacascascsa cascsacsacsacsa cacscsaacacscsacsacsaasccsacsacascsa csacascascascsacsacasaccacasscasacca vbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</div>
-                    <img class="vote like" src="like.png" alt="#"/>
+                    <a<img class="vote like" src="like.png" alt="#"/>
                     <img class="vote dislike" src="dislike.png" alt="#"/>
                 </li>
                 <li class="answer">
