--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -15,7 +15,7 @@
     </div>
     <div class="container">
         <div class="themes">
-            <h2 style="border-bottom-style:solid">Themes</h2>
+            <h2 style="border-bottom-style:solid">Categories</h2>
             <ul style="list-style-type:none; max-height: 80vh">
                 <li class="theme link"> SPORT</li>
                 <li class="theme link"> MUSIC </li>
@@ -33,7 +33,7 @@
         </div>
 
         <div class="selected_theme">
-            <a href="#" class="backButton"> Back </a>
+            <input type="image" src="back.png" height="60" style="float: left; margin-top: 4.4vh">
             <div class="themeText">Text nkevbhebhewbhvibewibe ibnvnweovnjnw vjnej  v w v j e n e j v n w e j n
                 d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
                 d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
@@ -46,7 +46,7 @@
                 d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
                 d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
                 d d d d d d d d  d d d d d d d dd d  d d d d d d d d d  d d d d d d d d d d d
-                d d d d d d d d d  d d d d d d d d d d d
+<!--                d d d d d d d d d  d d d d d d d d d d d-->
                 vownovnwjjvnewnjewnvjenwjof selected theme</div>
             <ul style="margin-top: 15vh">
                 <li class="answer">
@@ -56,41 +56,44 @@
                     <div class="answer_text">answer 1\nDSASDASDADA\nsadsvdsvsvnndjvnjvjvnjweve w v e w v w e v
                         e w e e e e e e e vwveweevwvewvewwvvewvewvewvw vewvwevvwvwvwevewvewvwv
                         wevwevweveadaddsvsvvfdfefevvefnajfnjkbd csascasccassacsacsacascascsacascascascas ca csaacscacacascascsacsacsacascascsa
-                        cascsacsacsacsa cacscsaacacscsacsacsaasccsacsacascsa csacascascasc
-                        sacsacasaccacasscasacca vbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</div>
-                    <img class="vote like" src="like.png" alt="#"/>
-                    <img class="vote dislike" src="dislike.png" alt="#"/>
+                        cascsacsacsacsa cacscsaacacsjnvnjvvveefsjnhesbwvevsvwn</div>
+                    <input type="image" class="vote" src="like.png" alt="#"/>
+                    <input type="image" class="vote" src="dislike.png" alt="#"/>
+                    <div class="vote_counter">156</div>
                 </li>
                 <li class="answer">
                     <div class="avatar">
                         <div class="nickname link" href="#">Nickname</div>
                     </div>
                     <div class="answer_text">answer 1\nDSASDASDADA\nsadsvdsvsvnndjvnjvjvnjweve w v e w v w e v e w e e e e e e e vwveweevwvewvewwvvewvewvewvw vewvwevvwvwvwevewvewvwv wevwevweveadaddsvsvvfdfefevvefnajfnjkbd csaacascasccassacsacsacascascsacascascascas ca csaacscacacascascsacsacsacascascsa cascsacsacsacsa cacscsaacacscsacsacsaasccsacsacascsa csacascascascsacsacasaccacasscasacca vbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</div>
-                    <img class="vote like" src="like.png" alt="#"/>
-                    <img class="vote dislike" src="dislike.png" alt="#"/>
+                    <input type="image" class="vote" src="like.png" alt="#"/>
+                    <input type="image" class="vote" src="dislike.png" alt="#"/>
+                    <div class="vote_counter">156</div>
                 </li>
                 <li class="answer">
                     <div class="avatar">
                         <div class="nickname link" href="#">Nickname</div>
                     </div>
                     <div class="answer_text">answer 1\nDSASDASDADA\nsadsvdsvsvnndjvnjvjvnjweve w v e w v w e v e w e e e e e e e vwveweevwvewvewwvvewvewvewvw vewvwevvwvwvwevewvewvwv wevwevweveadaddsvsvvfdfefevvefnajfnjkbd csaacascasccassacsacsacascascsacascascascas ca csaacscacacascascsacsacsacascascsa cascsacsacsacsa cacscsaacacscsacsacsaasccsacsacascsa csacascascascsacsacasaccacasscasacca vbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</div>
-                    <img class="vote like" src="like.png" alt="#"/>
-                    <img class="vote dislike" src="dislike.png" alt="#"/>
+                    <input type="image" class="vote" src="like.png" alt="#"/>
+                    <input type="image" class="vote" src="dislike.png" alt="#"/>
+                    <div class="vote_counter">156</div>
                 </li>
                 <li class="answer">
                     <div class="avatar">
                         <div class="nickname link" href="#">Nickname</div>
                     </div>
                     <div class="answer_text">answer 1\nDSASDASDADA\nsadsvdsvsvnndjvnjvjvnjweve w v e w v w e v e w e e e e e e e vwveweevwvewvewwvvewvewvewvw vewvwevvwvwvwevewvewvwv wevwevweveadaddsvsvvfdfefevvefnajfnjkbd csaacascasccassacsacsacascascsacascascascas ca csaacscacacascascsacsacsacascascsa cascsacsacsacsa cacscsaacacscsacsacsaasccsacsacascsa csacascascascsacsacasaccacasscasacca vbsjbvjbbvjernjnvnjvvveefsjnhesbwvevsvwn</div>
-                    <img class="vote like" src="like.png" alt="#"/>
-                    <img class="vote dislike" src="dislike.png" alt="#"/>
+                    <input type="image" class="vote" src="like.png" alt="#"/>
+                    <input type="image" class="vote" src="dislike.png" alt="#"/>
+                    <div class="vote_counter">156</div>
                 </li>
             </ul>
 
             <div class="new_answer">
                 <div class="avatar" style="margin-left: 0.4vw"></div>
-                <div class="my_answer">My answer</div>
-                <div class="button">Button</div>
+                <textarea placeholder="Type your opinion!" name="myAnswer" class="myAnswer"></textarea>
+                <p><input type="image" src="send.png" height="60"></p>
             </div>
         </div>
     </div>
