--- a/public/templates/new_index.css
+++ b/public/templates/new_index.css
@@ -1,11 +1,62 @@
 body {
     margin: 0 auto;
-    max-width: 1600px;
+    max-width: 160vh;
     width: 150vw;
     font-family: 'DM Sans', sans-serif;
     font-size: 20px;
     background: rgb(245, 242, 235  );
     color: #333333;
+}
+
+#makeDark {
+    background: rgba(87, 78, 63, 0.5);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: none;
+}
+#SignUpWindow {
+    width: 30vh;
+    height: 30vh;
+    text-align: center;
+    padding: 15px;
+    border-radius: 1vh;
+    color: #333333;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    background:  rgb(245, 242, 235  );
+}
+#makeDark:target {display: block;}
+.close {
+    display: inline-block;
+    color: #333333;
+    padding: 0 12px;
+    margin: 10px;
+    text-decoration: none;
+    background: rgb(191, 181, 163);
+    border-radius: 1vh;
+    font-size: 14pt;
+    cursor:pointer;
+}
+.close:hover {background: rgb(87, 78, 63);}
+
+.textSignUp{
+    padding: 0.1vh 0 0 2px;
+    margin-top: 3vh;
+    margin-left: 1vw;
+    margin-right: 1vw;
+    min-width: 15vw;
+    max-width: 15vw;
+    max-height: 5vh;
+    min-height: 5vh;
+    font-size: 20px;
+    border-radius: 1vh;
 }
 
 li {
@@ -63,7 +114,7 @@ ul {
     float: left;
     width: 21vw;
     height: 90vh;
-    padding: 0 1vw 0 1vw;
+    padding: 0 1vw 10px 1vw;
     margin: 3vh 0 0 0;
     background: rgb(220, 209, 192);
     border-width: 4px;
@@ -84,7 +135,7 @@ ul {
 
 .selected_theme {
     float: right;
-    width: 57vw;
+    width: 62vw;
     height: 90vh;
     margin: 3vh 0 0 0;
     padding: 0 1vw 0 1vw;
@@ -101,7 +152,6 @@ ul {
     margin-bottom: 1vh;
     padding: 1.5vh 0 6vh 1vw;
     border-width: 1px;
-    border-style: solid;
     border-color: #333333;
     border-radius: 10px;
     background: #b3a69b;
@@ -109,13 +159,12 @@ ul {
 
 .answer_text {
     float: left;
-
     margin-top: -1vh;
     margin-left: 0.5vw;
     max-height: 17.5vh;
     min-height: 10vh;
     overflow-y: auto;
-    max-width: 45vw;
+    max-width: 48vw;
 }
 
 .themeText {
@@ -147,12 +196,11 @@ ul {
 }
 
 .nickname {
-    border-style: solid;
     border-width: 1px;
     border-radius: 5px;
     background: #e0dbd7;
     padding: 5px 5px 5px 5px;
-    margin-top: 110px;
+    margin-top: 105px;
     justify-self: center;
     font-family: DM Sans, bold, serif;
     font-size: 17px;
@@ -170,10 +218,13 @@ ul {
     margin-bottom: 1vh;
     margin-top: 1.5vh;
     border-radius: 1vh;
-    border-style: solid;
-    border-width: 1px;
     background: rgb(220, 209, 192);
     padding: 0.5vh 0.5vw 0.5vh 0.5vw;
+}
+
+.vote_counter:hover {
+    background-color: rgb(87, 78, 63);
+    color: white;
 }
 
 
@@ -190,24 +241,15 @@ ul {
     display: flex;
 }
 
-a {
+.a {
     text-decoration: none;
     display: inline-block;
     padding: 8px 16px;
 }
 
-a:hover {
+.a:hover {
     background-color: rgb(87, 78, 63);
     color: white;
-}
-
-.backButton {
-    float: left;
-    margin-left: 0.5vw;
-    margin-top: 2.5vh;
-    border-right-style: solid;
-    background-color:rgb(220, 209, 192);
-    color: black;
 }
 
 .myAnswer {
@@ -222,7 +264,14 @@ a:hover {
     border-radius: 1vh;
 }
 
+.backButtonColor {
+    border-radius: 1vh;
+}
 
+.backButtonColor:hover {
+    background-color: rgb(87, 78, 63);
+    color: white;
+}
 
 
 
