--- a/views/partials/postPanel.handlebars
+++ b/views/partials/postPanel.handlebars
@@ -1,7 +1,7 @@
 <h1 style="background: lemonchiffon">Пост: {{post.title}}</h1>
 {{#each replies}}
     <div>
-        {{this.author_name}}
+        {{this.author_name}}:
         {{this.text}}
     </div>
     <br>
